[package]
name = "msbt"
version = "0.1.0"
edition = "2021"
authors = [ "lucka-me" ]
description = "Parser of MSBT message file"
repository = "https://github.com/lucka-me/msbt-rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
